testing if spacing is correct

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,7 +74,8 @@ div {
 aside {
 	width: 270px;
 	border: 1px solid #dddddd;
-	float: right;
+	float: left;
+	margin-left: 32px;
 	margin-top: 40px;
 }
 
